# swsh-c

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.ps1  main.c  matrix3d.c  matrix3d.h
include/: const.h  consts.h  diffeq.h  funcs.h  method.h  swsh.h  test.h  utils.h
include/gsl/: gsl_tensor3.h  gsl_tensor3_long_double.h
src/: difeq.c  difeq_original.c  diffeq.c  funcs.c  gsl_tensor3.c  gsl_tensor3_long_double.c  main.c  method.c  swsh.c  test.c  utils.c
src/gsl/: gsl_tensor3.c
